[package]
name = "exers"
version = "0.1.0"
edition = "2021"
authors = ["Oliwier Michalik"]
description = "Library for compiling and running other code in sandboxed environment"
repository = "https://github.com/olix3001/exers/"
license = "MIT"
readme = "README.md"
keywords = ["sandbox", "wasm", "rust", "compile"]

[features]
default = ["wasm", "native", "rust", "cpp", "jailed"]

# Runtimes
wasm = ["wasmtime", "wasmtime-wasi", "wasi-common"]
native = []
jailed = ["native"]

# Languages
rust = []
cpp = []

[dependencies]
derivative = "2.2.0"
include_dir = "0.7.3"
tempfile = "3.5.0"
wasi-common = { version = "9.0.1", optional = true }
wasmtime = { version = "9.0.1", optional = true }
wasmtime-wasi = { version = "9.0.1", optional = true }
which = "4.4.0"
