[package]
name = "exers"
version = "0.1.0"
edition = "2021"
authors = ["Oliwier Michalik"]
description = "Library for compiling and running other code in sandboxed environment"
repository = "https://github.com/olix3001/exers/"
license = "MIT"
readme = "README.md"
keywords = ["sandbox", "wasm", "rust", "compile"]

[features]
default = ["wasm", "native", "rust", "cpp", "jailed"]

# Runtimes
wasm = ["wasmer", "wasmer-wasix", "wasmer-middlewares"]
native = []
jailed = ["native"]

# Languages
rust = []
cpp = []

[dependencies]
derivative = "2.2.0"
tempfile = "3.5.0"
wasmer = { version = "3.3.0", optional = true }
wasmer-middlewares = { version = "3.3.0", optional = true }
wasmer-wasix = { version = "0.4.0", optional = true }
which = "4.4.0"
