[package]
name = "exers"
version = "0.2.0"
edition = "2021"
authors = ["Oliwier Michalik"]
description = "Library for compiling and running other code in sandboxed environment"
repository = "https://github.com/olix3001/exers/"
license = "MIT"
readme = "README.md"
keywords = ["sandbox", "wasm", "rust", "compile"]

[lib]
doctest = false

[features]
default = ["wasm", "native", "cpp", "python", "jailed", "javascript"]

# Shortcuts
all-languages = ["cpp", "python", "javascript"]
all-runtimes = ["wasm", "native", "jailed"]

# Runtimes
wasm = ["wasmer", "wasmer-wasix", "wasmer-middlewares"]
native = []
jailed = ["native"]

# Languages
cpp = []
python = []
javascript = []

# Additional features
wasm-llvm = ["wasmer-compiler-llvm"]
cython = ["cpp"]

[dependencies]
tempfile = "3.5.0"
wasmer = { version = "4.0.0-alpha.1", optional = true }
wasmer-middlewares = { version = "4.0.0-alpha.1", optional = true }
wasmer-wasix = { version = "0.5.0", optional = true }
wasmer-compiler-llvm = { version = "4.0.0-alpha.1", optional = true }
which = "4.4.0"